# finbudg

./: Cargo.toml  LICENSE  Makefile  README.md
budget/: Cargo.toml
budget/src/: lib.rs
budget/tests/: budget.rs  test.toml
docs/: finbudg.1.scd  finbudg.5.scd
src/: main.rs
