[package]
name = "finbudg"
version = "0.1.1"
edition = "2018"
description = "Quick cli tool to calculate your expenses and balance for a set period of time."
license = "MIT"
readme = "README.md"
authors = ["Yaroslav de la Peña Smirnov <contact@yaroslavps.com>"]
homepage = "https://www.yaroslavps.com/"
repository = "https://github.com/Yaroslav-95/finbudg"

[dependencies]
clap = "2.33"
colored = "2.0"
chrono = "0.4"
budget = { path = "budget" }

[workspace]
members = [
  "budget"
]

[profile.release]
lto = true
